# outputFramework

./: README.md  setup.cfg
.github/workflows/: main.yml
src/: __init__.py
src/OutputFramework/: OutFramework.py  __init__.py
src/output_framework/: __init__.py  output_framework.py
src/output_framework_simon_berndt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
