[metadata]
name = output-framework-simon-berndt
version = 0.0.1
author = Simon Berndt
author_email = nichts
description = nichts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DHBW-HDH-Team-HimbeerPi/outputFramework
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src